--- a/app/src/main/res/layout/statisctable.xml
+++ b/app/src/main/res/layout/statisctable.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -7,7 +7,6 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="0.25">
-
     </TextView>
 
     <TextView
@@ -15,6 +14,5 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="0.75">
-
     </TextView>
-</TableRow>
+</LinearLayout>
