--- a/app/src/main/res/layout/peglayout.xml
+++ b/app/src/main/res/layout/peglayout.xml
@@ -17,6 +17,7 @@
     </TableLayout>
 
     <TextView
+        android:id="@+id/pegScore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
