--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -5,8 +5,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/txLastname"
+        android:text="testeo"
+        android:id="@+id/txId"
         android:layout_gravity="center_vertical"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -16,8 +16,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="37dp"
-        android:text="New Text"
-        android:id="@+id/txtFirstName"
+        android:text="queteveo"
+        android:id="@+id/txScore"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
         android:layout_alignParentLeft="true"
